--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,23 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
 # dependencies
-/node_modules
+node_modules/
+jspm_packages/
 /.pnp
 .pnp.js
+
 
 # testing
 /coverage
@@ -11,13 +25,39 @@
 # production
 /build
 
+# TypeScript v1 declaration files
+typings/
+
+# Optional npm cache directory
+.npm
+
+# Optional Firebase directory
+.firebase
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# IDE
+.idea/
+.*.swp
+.vscode/chrome
+
+# environment variables file
+.env
+#.env.*
+.firebaserc
+
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
