--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,9 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "commander": "^5.0.0",
+    "csv-parse": "^4.8.8",
+    "firebase": "^7.14.1",
     "firebase-admin": "^8.9.0",
     "firebase-functions": "^3.3.0"
   },
