--- a/functions/package.json
+++ b/functions/package.json
@@ -3,6 +3,10 @@
   "scripts": {
     "lint": "eslint 'src/**/*.{js,ts}'",
     "build": "npm run lint && tsc",
+    "dbreset": "firebase firestore:delete --all-collections",
+    "dbreset:publishers": "firebase firestore:delete -y --shallow publishers",
+    "dbseed": "npm run dbseed:publishers",
+    "dbseed:publishers": "node lib/commands/dbseed.js publishers seeds/publishers.tsv",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
