--- a/functions/package.json
+++ b/functions/package.json
@@ -21,15 +21,22 @@
   "dependencies": {
     "commander": "^5.0.0",
     "csv-parse": "^4.8.8",
+    "date-fns": "^2.12.0",
+    "date-fns-timezone": "^0.1.4",
     "firebase": "^7.14.1",
     "firebase-admin": "^8.9.0",
-    "firebase-functions": "^3.3.0"
+    "firebase-functions": "^3.3.0",
+    "loadash": "^1.0.0",
+    "node-fetch": "^2.6.0",
+    "puppeteer": "^2.0.0"
   },
   "devDependencies": {
     "@types/eslint": "^6.8.0",
     "@types/eslint-plugin-prettier": "^2.2.0",
     "@types/jest": "^25.2.1",
+    "@types/node-fetch": "^2.5.7",
     "@types/prettier": "^2.0.0",
+    "@types/puppeteer": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
     "eslint": "^6.8.0",
